fix(index): fix table structure

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -38,6 +38,7 @@
             <tr>
               <th>Nome do Arquivo</th>
               <th>Extensão</th>
+              <th>Ações</th>
             </tr>
           </thead>
           <tbody id="fileList">
@@ -45,6 +46,7 @@
             <tr>
               <td><%= file.fileName %></td>
               <td><%= file.extension %></td>
+              <td></td>
             </tr>
             <%})%>
           </tbody>
