--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
     <title>MinIO Buckets</title>
   </head>
   <body>
@@ -46,7 +51,35 @@
             <tr>
               <td><%= file.fileName %></td>
               <td><%= file.extension %></td>
-              <td></td>
+              <td>
+                <form
+                  action="/download/<%= file.fileName %>"
+                  method="post"
+                  style="display: inline"
+                >
+                  <button
+                    type="submit"
+                    class="action-btn download"
+                    title="Download"
+                  >
+                    <i class="fa-solid fa-download"></i>
+                  </button>
+                </form>
+
+                <form
+                  action="/delete/<%= file.fileName %>"
+                  method="post"
+                  style="display: inline"
+                >
+                  <button
+                    type="submit"
+                    class="action-btn delete"
+                    title="Deletar"
+                  >
+                    <i class="fa-solid fa-trash"></i>
+                  </button>
+                </form>
+              </td>
             </tr>
             <%})%>
           </tbody>
